--- a/Anime.html
+++ b/Anime.html
@@ -325,7 +325,7 @@
                   class="movie-poster"
               /></a>
               <h2 class="movie-title">
-                <a href="MovieTemplate.html">Oppenhimer</a>
+                <a href="MovieTemplate.html">Naruto</a>
               </h2>
               <div class="movie-rating">
                 <div class="ratings-container">
@@ -409,7 +409,42 @@
                 alt="Movie 2 Poster"
                 class="movie-poster"
               />
-              <h2 class="movie-title">Forest Gump</h2>
+              <h2 class="movie-title">Naruto Shippūden</h2>
+              <div class="movie-rating">
+                <div class="ratings-container">
+                  <span class="movie-rating-text">User Rating: 10.0</span>
+                </div>
+                <span class="movie-year-text">1994</span>
+              </div>
+              <div class="action-circle">
+                <a href="#" class="icon AddFavorite">
+                  <div class="tooltip">Add to Favorite</div>
+                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+                </a>
+                <a href="#" class="icon RateIt">
+                  <div class="tooltip">Rate It</div>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </a>
+                <a href="#" class="icon watchlist">
+                  <div class="tooltip">Add to Watchlist</div>
+                  <span><i class="bx bx-list-plus"></i></span>
+                </a>
+                <a href="https://www.youtube.com" class="icon youtube">
+                  <div class="tooltip">Play Trailer</div>
+                  <span><i class="fab fa-youtube"></i></span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="movie-item">
+            <div class="movie-content">
+              <img
+                src="https://m.media-amazon.com/images/M/MV5BN2FlYjYxMTMtZGQzYy00OWU2LTkyYWMtNWJhODhmZmM0N2FhXkEyXkFqcGdeQXVyNjAwNDUxODI@._V1_FMjpg_UX1000_.jpg"
+                alt="Movie 2 Poster"
+                class="movie-poster"
+              />
+              <h2 class="movie-title">Black Clover</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
                   <span class="movie-rating-text">User Rating: 10.0</span>
@@ -444,7 +479,7 @@
                 alt="Movie 2 Poster"
                 class="movie-poster"
               />
-              <h2 class="movie-title">The Shawshank Redemption</h2>
+              <h2 class="movie-title">One Piece</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
                   <span class="movie-rating-text">User Rating: 10.0</span>
@@ -479,7 +514,7 @@
                 alt="Movie 2 Poster"
                 class="movie-poster"
               />
-              <h2 class="movie-title">The Green Mile</h2>
+              <h2 class="movie-title">Demon Slayer: Kimetsu no Yaiba</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
                   <span class="movie-rating-text">User Rating: 9.9</span>
@@ -514,7 +549,7 @@
                 alt="Movie 2 Poster"
                 class="movie-poster"
               />
-              <h2 class="movie-title">Cast Away</h2>
+              <h2 class="movie-title">Bleach</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
                   <span class="movie-rating-text">IMDB Score: 9.5</span>
@@ -549,7 +584,7 @@
                 alt="Movie 2 Poster"
                 class="movie-poster"
               />
-              <h2 class="movie-title">The Truman Show</h2>
+              <h2 class="movie-title">Fairy Tail</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
                   <span class="movie-rating-text">User Rating: 10.0</span>
@@ -584,7 +619,7 @@
                 alt="Movie 2 Poster"
                 class="movie-poster"
               />
-              <h2 class="movie-title">Identity</h2>
+              <h2 class="movie-title">Attack on Titan</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
                   <span class="movie-rating-text">User Rating: 9.7</span>
@@ -619,7 +654,7 @@
                 alt="Movie 2 Poster"
                 class="movie-poster"
               />
-              <h2 class="movie-title">The Imitation Game</h2>
+              <h2 class="movie-title">Death Note</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
                   <span class="movie-rating-text">User Rating: 9.8</span>
@@ -654,7 +689,7 @@
                 alt="Movie 2 Poster"
                 class="movie-poster"
               />
-              <h2 class="movie-title">Room 1408</h2>
+              <h2 class="movie-title">Jujutsu Kaisen</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
                   <span class="movie-rating-text">User Rating: 9.0</span>
@@ -689,7 +724,7 @@
                 alt="Movie 2 Poster"
                 class="movie-poster"
               />
-              <h2 class="movie-title">The Mist</h2>
+              <h2 class="movie-title">Hunter × Hunter</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
                   <span class="movie-rating-text">User Rating: 9.0</span>
@@ -724,7 +759,7 @@
                 alt="Movie 2 Poster"
                 class="movie-poster"
               />
-              <h2 class="movie-title">Blue Beetle</h2>
+              <h2 class="movie-title">One Punch</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
                   <span class="movie-rating-text">User Rating: 9.3</span>
@@ -759,7 +794,7 @@
                 alt="Movie 2 Poster"
                 class="movie-poster"
               />
-              <h2 class="movie-title">The Ruins</h2>
+              <h2 class="movie-title">My Hero Academia</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
                   <span class="movie-rating-text">User Rating: 8.3</span>
@@ -794,7 +829,7 @@
                 alt="Movie 2 Poster"
                 class="movie-poster"
               />
-              <h2 class="movie-title">Armageddon</h2>
+              <h2 class="movie-title">Seven Deadly Sins</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
                   <span class="movie-rating-text">User Rating: 8.8</span>
@@ -829,7 +864,7 @@
                 alt="Movie 2 Poster"
                 class="movie-poster"
               />
-              <h2 class="movie-title">Haunted Mansion</h2>
+              <h2 class="movie-title">Tokyo Ghoul</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
                   <span class="movie-rating-text">User Rating: 6.9</span>
@@ -864,7 +899,7 @@
                 alt="Movie 2 Poster"
                 class="movie-poster"
               />
-              <h2 class="movie-title">The Girl Next Door</h2>
+              <h2 class="movie-title">Dr. STONE</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
                   <span class="movie-rating-text">User Rating: 9.3</span>
@@ -899,7 +934,7 @@
                 alt="Movie 2 Poster"
                 class="movie-poster"
               />
-              <h2 class="movie-title">From Dusk Till Dawn</h2>
+              <h2 class="movie-title">Chainsaw Man</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
                   <span class="movie-rating-text">User Rating: 8.5</span>
@@ -934,47 +969,12 @@
                 alt="Movie 2 Poster"
                 class="movie-poster"
               />
-              <h2 class="movie-title">The Rock</h2>
+              <h2 class="movie-title">Boruto: Naruto Next Generations</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
                   <span class="movie-rating-text">User Rating: 9.4</span>
                 </div>
                 <span class="movie-year-text">1996</span>
-              </div>
-              <div class="action-circle">
-                <a href="#" class="icon AddFavorite">
-                  <div class="tooltip">Add to Favorite</div>
-                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
-                </a>
-                <a href="#" class="icon RateIt">
-                  <div class="tooltip">Rate It</div>
-                  <span><i class="fa-solid fa-star"></i></span>
-                </a>
-                <a href="#" class="icon watchlist">
-                  <div class="tooltip">Add to Watchlist</div>
-                  <span><i class="bx bx-list-plus"></i></span>
-                </a>
-                <a href="https://www.youtube.com" class="icon youtube">
-                  <div class="tooltip">Play Trailer</div>
-                  <span><i class="fab fa-youtube"></i></span>
-                </a>
-              </div>
-            </div>
-          </div>
-
-          <div class="movie-item">
-            <div class="movie-content">
-              <img
-                src="https://m.media-amazon.com/images/M/MV5BN2FlYjYxMTMtZGQzYy00OWU2LTkyYWMtNWJhODhmZmM0N2FhXkEyXkFqcGdeQXVyNjAwNDUxODI@._V1_FMjpg_UX1000_.jpg"
-                alt="Movie 2 Poster"
-                class="movie-poster"
-              />
-              <h2 class="movie-title">Speed</h2>
-              <div class="movie-rating">
-                <div class="ratings-container">
-                  <span class="movie-rating-text">User Rating: TBA</span>
-                </div>
-                <span class="movie-year-text">1994</span>
               </div>
               <div class="action-circle">
                 <a href="#" class="icon AddFavorite">
