--- a/index.html
+++ b/index.html
@@ -1447,6 +1447,78 @@
         <div class="movie-item">
           <div class="movie-content">
             <img
+              src="https://www.themoviedb.org/t/p/original/wjv0KA9HbegREJzC01OdgJxfrsT.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">Sudden Death</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> 9.9</span
+                >
+              </div>
+              <span class="movie-year-text">1995</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
+              src="https://www.themoviedb.org/t/p/original/buqmCdFQEWwEpL3agGgg2GVjN2d.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">Die Hard: With a Vengeance</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> 9.9</span
+                >
+              </div>
+              <span class="movie-year-text">1995</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
               src="https://www.themoviedb.org/t/p/original/xXxuJPNUDZ0vjsAXca0O5p3leVB.jpg"
               class="movie-poster"
             />
@@ -2903,79 +2975,6 @@
         <div class="movie-item">
           <div class="movie-content">
             <img
-              src="https://www.themoviedb.org/t/p/original/lx4kWcZc3o9PaNxlQpEJZM17XUI.jpg"
-              class="movie-poster"
-            />
-            <h2 class="movie-title">The Aviator</h2>
-            <div class="movie-rating">
-              <div class="ratings-container">
-                <span class="movie-rating-text"
-                  ><img src="./images/IMDb_logo.png" /> 9.0</span
-                >
-              </div>
-              <span class="movie-year-text">2004</span>
-            </div>
-            <div class="action-circle">
-              <a href="#" class="icon AddFavorite">
-                <div class="tooltip">Add to Favorite</div>
-                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
-              </a>
-              <a href="#" class="icon RateIt">
-                <div class="tooltip">Rate It</div>
-                <span><i class="fa-solid fa-star"></i></span>
-              </a>
-              <a href="#" class="icon watchlist">
-                <div class="tooltip">Add to Watchlist</div>
-                <span><i class="bx bx-list-plus"></i></span>
-              </a>
-              <a href="https://www.youtube.com" class="icon youtube">
-                <div class="tooltip">Play Trailer</div>
-                <span><i class="fab fa-youtube"></i></span>
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="movie-item">
-          <div class="movie-content">
-            <img
-              src="https://www.themoviedb.org/t/p/original/5HJEPkl4XOppUZA6yPtwUL2YDCT.jpg"
-              alt="Movie 2 Poster"
-              class="movie-poster"
-            />
-            <h2 class="movie-title">Assassins</h2>
-            <div class="movie-rating">
-              <div class="ratings-container">
-                <span class="movie-rating-text"
-                  ><img src="./images/IMDb_logo.png" /> 9.0</span
-                >
-              </div>
-              <span class="movie-year-text">1995</span>
-            </div>
-            <div class="action-circle">
-              <a href="#" class="icon AddFavorite">
-                <div class="tooltip">Add to Favorite</div>
-                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
-              </a>
-              <a href="#" class="icon RateIt">
-                <div class="tooltip">Rate It</div>
-                <span><i class="fa-solid fa-star"></i></span>
-              </a>
-              <a href="#" class="icon watchlist">
-                <div class="tooltip">Add to Watchlist</div>
-                <span><i class="bx bx-list-plus"></i></span>
-              </a>
-              <a href="https://www.youtube.com" class="icon youtube">
-                <div class="tooltip">Play Trailer</div>
-                <span><i class="fab fa-youtube"></i></span>
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="movie-item">
-          <div class="movie-content">
-            <img
               src="https://www.themoviedb.org/t/p/original/j5mxLNWjUlXUUk8weFBtnF4afIR.jpg"
               alt="Movie 2 Poster"
               class="movie-poster"
@@ -3134,42 +3133,6 @@
                 >
               </div>
               <span class="movie-year-text">1990</span>
-            </div>
-            <div class="action-circle">
-              <a href="#" class="icon AddFavorite">
-                <div class="tooltip">Add to Favorite</div>
-                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
-              </a>
-              <a href="#" class="icon RateIt">
-                <div class="tooltip">Rate It</div>
-                <span><i class="fa-solid fa-star"></i></span>
-              </a>
-              <a href="#" class="icon watchlist">
-                <div class="tooltip">Add to Watchlist</div>
-                <span><i class="bx bx-list-plus"></i></span>
-              </a>
-              <a href="https://www.youtube.com" class="icon youtube">
-                <div class="tooltip">Play Trailer</div>
-                <span><i class="fab fa-youtube"></i></span>
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="movie-item">
-          <div class="movie-content">
-            <img
-              src="https://www.themoviedb.org/t/p/original/4UOa079915QjiTA2u5hT2yKVgUu.jpg"
-              class="movie-poster"
-            />
-            <h2 class="movie-title">The Game</h2>
-            <div class="movie-rating">
-              <div class="ratings-container">
-                <span class="movie-rating-text"
-                  ><img src="./images/IMDb_logo.png" /> 9.0</span
-                >
-              </div>
-              <span class="movie-year-text">1997</span>
             </div>
             <div class="action-circle">
               <a href="#" class="icon AddFavorite">
@@ -3597,6 +3560,115 @@
         <div class="movie-item">
           <div class="movie-content">
             <img
+              src="https://www.themoviedb.org/t/p/original/lx4kWcZc3o9PaNxlQpEJZM17XUI.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">The Aviator</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> 9.0</span
+                >
+              </div>
+              <span class="movie-year-text">2004</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
+              src="https://www.themoviedb.org/t/p/original/5HJEPkl4XOppUZA6yPtwUL2YDCT.jpg"
+              alt="Movie 2 Poster"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">Assassins</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> 9.0</span
+                >
+              </div>
+              <span class="movie-year-text">1995</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
+              src="https://www.themoviedb.org/t/p/original/4UOa079915QjiTA2u5hT2yKVgUu.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">The Game</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> 9.0</span
+                >
+              </div>
+              <span class="movie-year-text">1997</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
               src="https://www.themoviedb.org/t/p/original/qgJ4CT2gCGJEUztmLmXosvf4lTX.jpg"
               alt="Movie 2 Poster"
               class="movie-poster"
@@ -3974,6 +4046,42 @@
                 >
               </div>
               <span class="movie-year-text">1996</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
+              src="https://www.themoviedb.org/t/p/original/jRL2OxZXsGWFVbfoyk4Y0LeI9WS.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">Dark Angel</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> 9.0</span
+                >
+              </div>
+              <span class="movie-year-text">1990</span>
             </div>
             <div class="action-circle">
               <a href="#" class="icon AddFavorite">
